# ai_roundtable

./: .gitignore  LICENSE  README.md  ROUNDTABLE_README.md  ai_roundtable.py  pyproject.toml  test_ai_roundtable.py
.github/workflows/: test.yml
ai_roundtable/: __init__.py  __main__.py  _analysis.py  _cli.py  _colors.py  _constants.py  _diff.py  _history.py  _interactive.py  _log.py  _orchestrator.py  _preflight.py  _prompts.py  _protocols.py  _providers.py  _runners.py  _sanitize.py  _scanner.py  _types.py  _web_context.py
tests/: test_analysis.py  test_colors.py  test_diff.py  test_history.py  test_log.py  test_orchestrator.py  test_preflight.py  test_prompts.py  test_providers.py  test_runners.py  test_sanitize.py  test_scanner.py  test_sentinels.py  test_types.py  test_web_context.py
